build_log_v2.txt
⚠️  `RUSTFLAGS` set. Dependency paths will not be remapped; builds may not be reproducible. Use CARGO_BUILD_RUSTFLAGS instead, which the CLI will merge with remapping.
ℹ️  cargo rustc --manifest-path=contracts\poll\Cargo.toml --crate-type=cdylib --target=wasm32v1-none --release
   Compiling poll-contract v0.0.0 (D:\Gihtub Main\OrbitPay\stellar-payment-dapp\contracts\poll)
warning: use of deprecated method `soroban_sdk::events::Events::publish`: use the #[contractevent] macro on a contract event type
  --> contracts\poll\src\lib.rs:42:22
   |
42 |         env.events().publish((symbol_short!("vote"), option), new_votes);
   |                      ^^^^^^^
   |
   = note: `#[warn(deprecated)]` on by default

error[E0382]: borrow of moved value: `option`
  --> contracts\poll\src\lib.rs:44:9
   |
22 |     pub fn vote(env: Env, option: Symbol) {
   |                           ------ move occurs because `option` has type `soroban_sdk::Symbol`, which does not implement the `Copy` trait
...
42 |         env.events().publish((symbol_short!("vote"), option), new_votes);
   |                                                      ------ value moved here
43 |         
44 |         log!(&env, "Vote cast for: {}", option);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ value borrowed here after move
   |
   = note: this error originates in the macro `log` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider cloning the value if the performance cost is acceptable
   |
42 |         env.events().publish((symbol_short!("vote"), option.clone()), new_votes);
   |                                                            ++++++++

For more information about this error, try `rustc --explain E0382`.
warning: `poll-contract` (lib) generated 1 warning
error: could not compile `poll-contract` (lib) due to 1 previous error; 1 warning emitted
❌ error: exit status exit code: 101
